feat: Swagger handlers done
